# Autofocusing

./: .clang-format  CITATION.cff  CMakeLists.txt  LICENSE  NOTICE  README.md  manual.md  run.sh
Scripts/GlobalCMT/: README.md  ndk_to_moment_loc.pl
src/: CMakeLists.txt  calTT.cpp  calTT.h  cal_ccf.cpp  cal_ccf_eq.cpp  station_info.cpp  station_info.h  util.cpp  util.h
